--- a/rentiki_app/src/app/app.component.scss
+++ b/rentiki_app/src/app/app.component.scss
@@ -1,8 +1,9 @@
 ion-item {
     position: relative;
     z-index: 1;
-    width: 20em;
+    width: 100%;
     height: 3.5em;
+    color: var(--ion-color-medium-shade);
     
     &::after {
         content: '';
@@ -10,7 +11,21 @@ ion-item {
         left: 1em;
         bottom: 0;        
         height: 1px;
-        width: 85%;
+        width: 89%;
         border-bottom: 1px solid var(--ion-color-primary);
     }
 }
+
+.close_menu {
+    transform: translate(-50%, 10%);
+    font-size: 1.5em;
+}
+
+.water-mark {
+    color: var(--ion-color-medium-shade);
+    margin-bottom: 5%;
+    font-family: 'Times New Roman', Times, serif;
+    display: flex;
+    justify-content: center;
+}
+
