--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -8,5 +8,9 @@
 </ion-header>
 
 <ion-content>
-  
+  <ion-item
+    ><ion-buttons
+      ><ion-button (click)="onfetchHouses()">Click</ion-button></ion-buttons
+    ></ion-item
+  >
 </ion-content>
