--- a/rentiki_app/src/app/app.component.html
+++ b/rentiki_app/src/app/app.component.html
@@ -10,19 +10,19 @@
     <ion-content>
       <ion-menu-toggle>
         <ion-list>
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink="/profile">
             <ion-icon name="person-outline" slot="start"></ion-icon>
             <ion-label>Perfil</ion-label>
           </ion-item>
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink="/houses">
             <ion-icon name="home-outline" slot="start"></ion-icon>
             <ion-label>Imóveis</ion-label>
           </ion-item>
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink="/houses/favorites">
             <ion-icon name="star-outline" slot="start"></ion-icon>
             <ion-label>Favoritos</ion-label>
           </ion-item>
-          <ion-item lines="none" class="item-final">
+          <ion-item lines="none" class="item-final" routerLink="/auth">
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-item>
