--- a/rentiki_app/src/app/profile/profile.page.html
+++ b/rentiki_app/src/app/profile/profile.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>profile</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button menuId="first"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
