--- a/rentiki_app/src/app/app.component.scss
+++ b/rentiki_app/src/app/app.component.scss
@@ -4,6 +4,8 @@ ion-item {  //Itens do menu
     width: 100%;
     height: 3.5em;
     color: var(--ion-color-medium-shade);
+    --background-focused: var(--ion-color-primary);
+    --color-activated: var(--ion-color-primary);
     
     &::after {
         content: '';
