--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -8,9 +8,15 @@
 </ion-header>
 
 <ion-content>
-  <ion-item
-    ><ion-buttons
-      ><ion-button (click)="onfetchHouses()">Click</ion-button></ion-buttons
-    ></ion-item
-  >
+  <ion-card>
+    <ion-card-header>
+
+      <ion-card-title>Título do anúncio</ion-card-title>
+
+      
+
+      <ion-label>Descrição do anúncio</ion-label>
+
+    </ion-card-header>
+  </ion-card>
 </ion-content>
