--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -4,6 +4,7 @@
       <ion-menu-button menuId="first"></ion-menu-button>
     </ion-buttons>
     <ion-title>Imóveis para alugar</ion-title>
+    <ion-icon name="add-outline" slot="end"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
