--- a/rentiki_app/src/app/houses/houses.page.scss
+++ b/rentiki_app/src/app/houses/houses.page.scss
@@ -1,15 +1,15 @@
 ion-card {
+    font-weight: bold;
     height: 35vh;
 
     ion-buttons {
         font-size: 0.7em;
         display: grid;
-        border: 1px solid black;
+        grid-template-columns: 20% 20% 20% 40%;
 
         ion-button {
             font-size: inherit;
-            right: 10px;
-            border: 1px solid black;
+            grid-column-start: 4;
         }
     }
 }
