--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -1,10 +1,15 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" 
+  style="justify-content: center;">
+
     <ion-buttons slot="start">
       <ion-menu-button menuId="first"></ion-menu-button>
     </ion-buttons>
+
     <ion-title>Imóveis para alugar</ion-title>
-    <ion-icon name="add-outline" slot="end"></ion-icon>
+
+    <ion-icon name="add-circle-outline" class="add-offer" slot="end"></ion-icon>
+
   </ion-toolbar>
 </ion-header>
 
