--- a/rentiki_app/src/app/houses/houses.page.scss
+++ b/rentiki_app/src/app/houses/houses.page.scss
@@ -1,3 +1,9 @@
+.add-offer {
+    display: flex;
+    font-size: 1.7em;
+    margin-right: 0.6em;
+}
+
 ion-card {
     font-weight: bold;
     height: 35vh;
