--- a/rentiki_app/src/app/app.component.html
+++ b/rentiki_app/src/app/app.component.html
@@ -18,6 +18,10 @@
             <ion-icon name="home-outline" slot="start"></ion-icon>
             <ion-label>Imóveis</ion-label>
           </ion-item>
+          <ion-item lines="none" routerLink="/houses/new-house">
+            <ion-icon name="add-outline" class="add-offer" slot="start"></ion-icon>
+            <ion-label>Anunciar</ion-label>
+          </ion-item>
           <ion-item lines="none" routerLink="/houses/favorites">
             <ion-icon name="star-outline" slot="start"></ion-icon>
             <ion-label>Favoritos</ion-label>
