--- a/rentiki_app/src/app/houses/house/house.page.html
+++ b/rentiki_app/src/app/houses/house/house.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>house</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button menuId="first"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Nome da offerta</ion-title>
   </ion-toolbar>
 </ion-header>
 
