--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -17,7 +17,7 @@
   <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
     <ion-segment-button value="all">Todos</ion-segment-button>
     <ion-segment-button value="rent">Alugar</ion-segment-button>
-    <ion-segment-button value="sell">Vender</ion-segment-button>
+    <ion-segment-button value="buy">Comprar</ion-segment-button>
   </ion-segment>
 
   <ion-grid>
