--- a/rentiki_app/src/app/houses/new-house/new-house.page.html
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-menu-button menuId="first"></ion-menu-button>
+      <ion-back-button defaultHref="/houses"></ion-back-button>
     </ion-buttons>
     <ion-title>Anunciar</ion-title>
   </ion-toolbar>
