--- a/rentiki_app/src/app/houses/house/house.page.html
+++ b/rentiki_app/src/app/houses/house/house.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/houses"></ion-back-button>
     </ion-buttons>
-    <ion-title>Nome da offerta</ion-title>
+    <ion-title>{{ useOffer.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
