--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -36,7 +36,7 @@
 
                 <ion-label class="price">{{ houses.price | currency: 'BRL' }}</ion-label>
 
-                <ion-button [routerLink]="['/', 'houses', houses.id]">
+                <ion-button [routerLink]="['/', 'houses', 'offers', houses.id]">
                   Mais detalhes
                   <ion-icon name="chevron-forward-outline"></ion-icon>
                 </ion-button>                
