--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -26,7 +26,7 @@
         <ion-list *ngIf="!isLoading && housesLoadedShow && housesLoadedShow.length > 0">
           <ion-item-sliding *ngFor="let houses of housesLoadedShow">
             <ion-card>
-              <ion-card-header class="ion-text-center"><ion-label class="title">{{ houses.title }}</ion-label><ion-icon name="heart-outline" class="favorite"></ion-icon></ion-card-header>              
+              <ion-card-header class="ion-text-center"><ion-label class="title">{{ houses.title }}</ion-label><ion-icon [name]="heart" (click)="favoriteToggle()" class="favorite"></ion-icon></ion-card-header>              
 
               <ion-card-content>
                 <app-slide [houses]="houses"></app-slide>
@@ -36,7 +36,7 @@
 
                 <ion-label class="price">{{ houses.price | currency: 'BRL' }}</ion-label>
 
-                <ion-button [routerLink]="['/', 'houses', 'offers', houses.id]">
+                <ion-button [routerLink]="['/', 'houses', 'offers', houses.offerKey]">
                   Mais detalhes
                   <ion-icon name="chevron-forward-outline"></ion-icon>
                 </ion-button>                
