--- a/rentiki_app/src/app/app.component.html
+++ b/rentiki_app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu side="start" menuId="first">
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Nome do usuário</ion-title>
+        <ion-title>Menu</ion-title>
         <ion-icon name="arrow-undo-outline" slot="end" class="close_menu" (click)="closeMenu()"></ion-icon>
       </ion-toolbar>
     </ion-header>
