--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -6,7 +6,7 @@
       <ion-menu-button menuId="first"></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>Imóveis para alugar</ion-title>
+    <ion-title>Encontrar Imóveis</ion-title>
 
     <ion-icon name="add-outline" class="add-offer" slot="end" routerLink="/houses/new-house"></ion-icon>
 
