--- a/rentiki_app/src/app/houses/new-house/new-house.page.html
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.html
@@ -14,10 +14,7 @@
         <ion-col>
           <ion-label>Título do Anúncio:</ion-label>
           <ion-item class="offerTextInput">
-            <ion-input
-              type="text"
-              formControlName="title"
-            ></ion-input>
+            <ion-input type="text" formControlName="title"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -49,8 +46,10 @@
         <ion-col>
           <ion-list>
             <ion-label>Tipo de contrato:</ion-label>
-            <ion-radio-group formControlName="contract">
-
+            <ion-radio-group
+              (ionChange)="radioGroupChange($event)"
+              formControlName="contract"
+            >
               <ion-item class="radio-buttons">
                 <ion-label>Venda</ion-label>
                 <ion-radio slot="start" value="sell"></ion-radio>
@@ -60,7 +59,6 @@
                 <ion-label>Aluguel</ion-label>
                 <ion-radio slot="start" value="rent"></ion-radio>
               </ion-item>
-
             </ion-radio-group>
           </ion-list>
         </ion-col>
@@ -70,22 +68,32 @@
         <ion-col>
           <ion-label>Telefone(s):</ion-label>
           <ion-list>
-
             <div>
               <ion-item class="offerTextInput">
                 <ion-input type="number" formControlName="contact"></ion-input>
-                <ion-icon name="add"></ion-icon>                                       
+                <ion-icon name="add"></ion-icon>
               </ion-item>
               <div class="whatsappBtn">
-                <ion-checkbox slot="start" style="margin-right: 5px;"></ion-checkbox>
+                <ion-checkbox
+                  slot="start"
+                  style="margin-right: 5px"
+                ></ion-checkbox>
                 <ion-label>Esse número possui whatsapp</ion-label>
-              </div>                     
+              </div>
             </div>
-
           </ion-list>
         </ion-col>
       </ion-row>
-      
+
+      <ion-row>
+        <ion-col>
+          <ion-buttons style="justify-content: center">
+            <ion-button type="submit" (click)="onCreateOffer()" id="submitBTN"
+              >Anunciar</ion-button
+            >
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
