--- a/rentiki_app/src/app/houses/new-house/new-house.page.scss
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.scss
@@ -3,7 +3,7 @@ ion-row {
 }
 
 .offerTextInput {
-    --background: #f6f5f5;
+    --background: #ebe7e7;
     border-radius: 5px;
     margin-top: 5px;
 }
@@ -16,4 +16,10 @@ ion-row {
 .whatsappBtn {
     display: flex;
     margin-top: 5px;
+}
+
+#submitBTN {
+    background-color: var(--ion-color-primary);
+    border-radius: 5px;
+    color: #fff;
 }
