--- a/rentiki_app/src/app/profile/profile.page.html
+++ b/rentiki_app/src/app/profile/profile.page.html
@@ -3,10 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button menuId="first"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Perfil</ion-title>
+    <ion-title>Meus anúncios</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-label>Precisa terminar autenticação primeiro</ion-label>
+  <ion-buttons>
+    <ion-button (click)=" onClick()">Teste</ion-button>
+  </ion-buttons>
 </ion-content>
