--- a/rentiki_app/src/app/auth/auth.page.html
+++ b/rentiki_app/src/app/auth/auth.page.html
@@ -49,7 +49,7 @@
 
       <ion-row>
         <ion-col id="signupPlace">
-          <ion-label id="signup" (click)="onSignup()">{{ isLogin ? 'Cadastre-se' : 'Login' }}</ion-label>
+          <ion-label id="signup" (click)="onSwitchAuth()">{{ isLogin ? 'Cadastre-se' : 'Login' }}</ion-label>
         </ion-col>
       </ion-row>
     </ion-grid>
