--- a/rentiki_app/src/app/app.component.html
+++ b/rentiki_app/src/app/app.component.html
@@ -26,7 +26,7 @@
             <ion-icon name="star-outline" slot="start"></ion-icon>
             <ion-label>Favoritos</ion-label>
           </ion-item>
-          <ion-item lines="none" class="item-final" routerLink="/auth">
+          <ion-item lines="none" class="item-final" routerLink="/auth" (click)="onLogout()">
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-item>
