--- a/rentiki_app/src/app/houses/house/house.page.html
+++ b/rentiki_app/src/app/houses/house/house.page.html
@@ -17,12 +17,13 @@
 
     <ion-row>
       <ion-col>
-        <app-slide [houses]="useOffer"></app-slide>
+        <app-slide [houses]="useOffer"></app-slide>      
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
+        <ion-label>Descrição:</ion-label><br>
         <ion-label>{{ useOffer?.description }}</ion-label>
       </ion-col>
     </ion-row>
