--- a/rentiki_app/src/app/houses/slide/slide.component.html
+++ b/rentiki_app/src/app/houses/slide/slide.component.html
@@ -1,6 +1,7 @@
 <swiper
   [config]="config"
   [loop]="true"
+  [pagination]="true"
   #swiper
 >
   <ng-template swiperSlide *ngFor="let imagePic of houses.images">
