--- a/rentiki_app/src/global.scss
+++ b/rentiki_app/src/global.scss
@@ -31,3 +31,19 @@
 /* Swiping cards style */
 @import '~swiper/scss';
 @import '~@ionic/angular/css/ionic-swiper';
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
+
+.swiper-button-prev, .swiper-button-next {
+    width: 10px;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after  {
+    color: #fff;
+    font-size: 15px;    
+}
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    background-color: rgba(255, 255, 255, 0.815);
+}
