--- a/rentiki_app/src/app/houses/house/house.page.html
+++ b/rentiki_app/src/app/houses/house/house.page.html
@@ -21,12 +21,31 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col>
-        <ion-label>Descrição:</ion-label><br>
-        <ion-label>{{ useOffer?.description }}</ion-label>
+    <ion-row style="margin-top: 30px;">
+      <ion-col class="description">
+        <ion-label>📝 Descrição do imóvel:</ion-label>
+        <ion-label class="description-text">{{ useOffer?.description }}</ion-label>
       </ion-col>
     </ion-row>
+
+    <ion-row style="margin-top: 30px;">
+      <ion-col class="description">
+        <ion-label>🏠 Endereço:</ion-label>
+        <ion-label class="description-text">{{ useOffer?.location }}</ion-label>
+      </ion-col>
+    </ion-row>
+
+    <ion-row style="margin-top: 30px;">
+      <ion-col class="contato">
+        <ion-label>📞 Contato:</ion-label>
+        <ion-label class="number">{{ telNum }}</ion-label>
+        <ion-label class="zap-text" *ngIf="useOffer.whatsapp">Esse número possui whatsapp.</ion-label>
+      </ion-col>
+    </ion-row>
+
+    <div class="whatsapp" *ngIf="useOffer.whatsapp">
+      <ion-icon name="logo-whatsapp"></ion-icon>
+    </div>
 
   </ion-grid>
 </ion-content>
