--- a/rentiki_app/src/global.scss
+++ b/rentiki_app/src/global.scss
@@ -45,5 +45,5 @@
 }
 
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-    background-color: rgba(255, 255, 255, 0.815);
+    background-color: #fff;
 }
