--- a/rentiki_app/src/app/houses/new-house/new-house.page.scss
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.scss
@@ -1,5 +1,20 @@
 ion-row {
-    margin-top: 15px;
+    margin-top: 50px;
+}
+
+.image-row {
+    display: flex;
+
+    .image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px dashed var(--ion-color-medium-shade);
+        margin: 0 5px 0 5px;
+        height: 70px;
+        width: 70px;
+    }
+
 }
 
 .offerTextInput {
