--- a/rentiki_app/src/app/houses/new-house/new-house.page.html
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.html
@@ -85,11 +85,11 @@
         <ion-label>Adicionar Imagens:</ion-label>
         <ion-col>
           <ion-list class="image-row">
-            <div class="image">+</div>
-            <div class="image">+</div>
-            <div class="image">+</div>
-            <div class="image">+</div>
-            <div class="image">+</div>
+            <div class="image">+<input type="file" accept="image/jpeg"></div>
+            <div class="image">+<input type="file" accept="image/jpeg"></div>
+            <div class="image">+<input type="file" accept="image/jpeg"></div>
+            <div class="image">+<input type="file" accept="image/jpeg"></div>
+            <div class="image">+<input type="file" accept="image/jpeg"></div>
           </ion-list>
         </ion-col>
       </ion-row>
