--- a/rentiki_app/src/app/houses/new-house/new-house.page.scss
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.scss
@@ -13,6 +13,13 @@ ion-row {
         margin: 0 5px 0 5px;
         height: 70px;
         width: 70px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    input {
+        position: absolute;
+        opacity: 0;
     }
 
 }
