--- a/rentiki_app/src/app/shared/pickers/image-picker/image-picker.component.html
+++ b/rentiki_app/src/app/shared/pickers/image-picker/image-picker.component.html
@@ -1,5 +1,6 @@
-<div class="picker">
-  <ion-img>
-    
-  </ion-img>
+<div class="image">
+  
+  +
+  <input type="file" accept="image/jpeg" />
+
 </div>
