--- a/rentiki_app/src/app/houses/new-house/new-house.page.html
+++ b/rentiki_app/src/app/houses/new-house/new-house.page.html
@@ -85,11 +85,11 @@
         <ion-label>Adicionar Imagens:</ion-label>
         <ion-col>
           <ion-list class="image-row">
-            <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>
-            <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>
-            <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>
-            <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>            
-            <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>            
+            <app-image-picker></app-image-picker>          
+            <app-image-picker></app-image-picker>          
+            <app-image-picker></app-image-picker>          
+            <app-image-picker></app-image-picker>          
+            <app-image-picker></app-image-picker>          
           </ion-list>
         </ion-col>
       </ion-row>
