--- a/rentiki_app/src/app/houses/houses.page.html
+++ b/rentiki_app/src/app/houses/houses.page.html
@@ -46,3 +46,5 @@
     </ion-row>
   </ion-grid>
 </ion-content>
+
+<!-- Testando o poder das branchs (essa aqui deve estar em pictures e somente nela) -->
