--- a/rentiki_app/src/app/profile/profile.page.html
+++ b/rentiki_app/src/app/profile/profile.page.html
@@ -8,7 +8,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+
+  <ion-label *ngIf="!offersLoaded">Você ainda não criou nenhum anúncio.</ion-label>
+
+  <ion-list *ngIf="offersLoaded">
     <ion-item-sliding *ngFor="let offer of offersLoaded">
       <ion-item>
 
